# magneto

./: .gitignore  .gitleaks-baseline.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  conftest.py  packages_magneto.puml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: magneto.env.example  transmission-vpn-guard.env.example
config/tachometer/: profile.toml
docs/: contributor-architecture-blueprint.md  wiring-harness.md
docs/diagrams/: python-classes.puml  python-packages.puml  repo-architecture.drawio  repo-architecture.puml  shell-call-graph.puml  tooling-integrations.puml
scripts/: apply_host_setup.sh  apply_magneto_stack.sh  apply_transmission_vpn_guard.sh  diagnose_transmission_vpn.sh  install_transmission_daemon_backend.sh  install_transmission_vpn_guard.sh  install_web_service.sh  run_tachometer_profile.sh  transmission_vpn_guard.sh
src/magneto/: __init__.py  __main__.py  autopass.py  cli.py  config.py  notifications.py  transmission.py  web.py
src/magneto/static/: app.js  styles.css
src/magneto/templates/: _torrent_list.html  index.html
tests/: test_cli.py  test_config.py  test_notifications.py  test_scripts.py  test_transmission.py  test_web.py
